# aristotles_puzzle

./: .gitignore  Cargo.toml  README.md  makefile  pyproject.toml
puzzle/: main.py  recursive.py
src/: main.rs
