[tool.poetry]
name = "puzzle"
version = "0.1.0"
description = "Solving Aristotle's Puzzle"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "puzzle" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ipython = "^8.18.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"

# [tool.poetry.scripts]
# housing = "housing.cli.main:housing"

[tool.mypy]
files = "puzzle"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["puzzle"]
